@@ -1,3 +1,9 @@
+Travel::Status::DE::DBRIS 0.08 - Tue Mar 25 2025
+
+    * Journey: Add id accessor
+    * Journey: Retrieve train/line number from journey ID if it is not provided
+      by the API
+
 Travel::Status::DE::DBRIS 0.07 - Sun Mar 23 2025
 
     * New optional recommended module: GIS::Distance (for Journey->polyline)
